--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
          </section>
 
          <!-- Seção de passos de planejamento -->
-          <section class="projessao-em-etapas">
-            <div class="projecao-textos">
+          <section class="projessao-em-etapas projecao">
+            <div class="projecao-textos projecao-passos">
                 <h2 class="titulo-secundario">Projetando seu sonho em três passos simples</h2>
 
                 <div class="passo-simples">
@@ -189,7 +189,46 @@
                 </div>
             </div>
 
-          </section>
+            <img src="./imagens/ambientes/Image 4.png" alt="">
+        </section>
+
+        <article class="card">
+            <span class="aspas">"</span>
+
+            <p class="paragrafo texto-branco">Trabalhar com a equipe de design de vocês foi um verdadeiro prazer. A atenção aos detalhes e a criatividade superaram minhas expectativas. Muito obrigada por tornar minha casa tão bonita!</p>
+
+            <div class="cliente">
+                <img src="./imagens/clientes/Sophie.png" alt="">
+
+                <p class="paragrafo texto-cinza">
+
+                    <p class="paragrafo texto-cinza">
+                        <span class="nome-cliente">Sophie Carter</span>
+                        São Paulo, SP
+                    </p>
+
+                </p>
+            </div>
+        </article>
+
+        <article class="card">
+            <span class="aspas">"</span>
+
+            <p class="paragrafo texto-branco">Serviço excepcional! Desde a consulta inicial até a revelação final, sua equipe demonstrou profissionalismo e um olhar aguçado para o design. Altamente recomendado!</p>
+
+            <div class="cliente">
+                <img src="./imagens/clientes/Roberto.png" alt="">
+
+                <p class="paragrafo texto-cinza">
+
+                    <p class="paragrafo texto-cinza">
+                        <span class="nome-cliente">Roberto Cunha</span>
+                        Maceió, AL
+                    </p>
+
+                </p>
+            </div>
+        </article>
       </main>
 </body>
 </html>
