--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
          </section>
 
          <!-- Seção de passos de planejamento -->
-          <section class="projessao-em-etapas projecao">
+          <section class="projecao-em-etapas projecao">
             <div class="projecao-textos projecao-passos">
                 <h2 class="titulo-secundario">Projetando seu sonho em três passos simples</h2>
 
@@ -154,35 +154,58 @@
             <img src="./imagens/ambientes/Image 4.png" alt="">
         </section>
         <section class="nossos-clientes">
-            <h2 class="titulo-secundario">O que nossos clientes dizem sobre nós</h2>
-        <div class="depoimentos-clientes">
-            <article class="card">
-                <span class="aspas">"</span>
-                <p class="paragrafo texto-branco">Trabalhar com a equipe de design de vocês foi um verdadeiro prazer. A atenção aos detalhes e a criatividade superaram minhas expectativas. Muito obrigada por tornar minha casa tão bonita!</p>
-                <div class="cliente">
-                    <img src="./imagens/clientes/Sophie.png" alt="">
-                    <p class="paragrafo texto-cinza">
-                        <p class="paragrafo texto-cinza">
-                            <span class="nome-cliente">Sophie Carter</span>
-                            São Paulo, SP
-                        </p>
-                    </p>
+            <h2 class="titulo-secundario">O que Nossos Clientes Dizem Sobre Nós</h2>
+
+            <div class="conteudo-secao-clientes">
+                <div class="depoimentos-clientes">
+                    <article class="card">
+                        <span class="aspas">“</span>
+                        <p class="paragrafo texto-branco">Trabalhar com a equipe de design de vocês foi um verdadeiro prazer. A atenção aos detalhes e a criatividade superaram minhas expectativas. Muito obrigada por tornar minha casa tão bonita!</p>
+                        <div class="cliente">
+                            <img src="./imagens/clientes/Sophie.png" alt="">
+                            <p class="paragrafo texto-cinza">
+                                <p class="paragrafo texto-cinza">
+                                    <span class="nome-cliente">Sophie Carter</span>
+                                    São Paulo, SP
+                                </p>
+                            </p>
+                        </div>
+                    </article>
+                    <article class="card">
+                        <span class="aspas">“</span>
+                        <p class="paragrafo texto-branco">Serviço excepcional! Desde a consulta inicial até a revelação final, sua equipe demonstrou profissionalismo e um olhar aguçado para o design. Altamente recomendado!</p>
+                        <div class="cliente">
+                            <img src="./imagens/clientes/Roberto.png" alt="">
+                            <p class="paragrafo texto-cinza">
+                                <p class="paragrafo texto-cinza">
+                                    <span class="nome-cliente">Roberto Cunha</span>
+                                    Maceió, AL
+                                </p>
+                            </p>
+                        </div>
+                    </article>
                 </div>
-            </article>
-            <article class="card">
-                <span class="aspas">"</span>
-                <p class="paragrafo texto-branco">Serviço excepcional! Desde a consulta inicial até a revelação final, sua equipe demonstrou profissionalismo e um olhar aguçado para o design. Altamente recomendado!</p>
-                <div class="cliente">
-                    <img src="./imagens/clientes/Roberto.png" alt="">
-                    <p class="paragrafo texto-cinza">
-                        <p class="paragrafo texto-cinza">
-                            <span class="nome-cliente">Roberto Cunha</span>
-                            Maceió, AL
-                        </p>
-                    </p>
+                <div class="botoes-slide">
+                    <button class="slide"><img src="./icones/seta.svg" alt=""></button>
+                    <button class="slide"><img src="./icones/seta.svg" alt=""></button>
                 </div>
-            </article>
-        </div>
-      </main>
+            </div>
+        </section>
+
+        <!-- Seção de contato da empresa -->
+         <section class="contato">
+            <h2 class="titulo-secundario">
+                Assine nossa NewsLetter para receber Insights em Design
+            </h2>
+
+            <p class="paragrafo">Seja o primeiro a conhecer as últimas tendências, inspirações e ofertas especias. Assine nossa newsletter e receba o mundo do design diretamente em seu e-mail.</p>
+
+            <form action="">
+                <input type="email" placeholder="Insira seu endereço de e-mail">
+
+                <button>Inscrever-se</button>
+            </form>
+         </section>
+    </main>
 </body>
 </html>
