--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@
             <p class="paragrafo">Seja o primeiro a conhecer as últimas tendências, inspirações e ofertas especias. Assine nossa newsletter e receba o mundo do design diretamente em seu e-mail.</p>
 
             <form action="">
-                <input type="email" placeholder="Insira seu endereço de e-mail">
+                <input type="email" placeholder="✉️ Insira seu endereço de e-mail">
 
-                <button>Inscrever-se</button>
+                <button class="">Inscrever-se</button>
             </form>
          </section>
     </main>
