--- a/index.html
+++ b/index.html
@@ -207,5 +207,11 @@
             </form>
          </section>
     </main>
+
+    <footer>
+        <section class="container">
+            
+        </section>
+    </footer>
 </body>
 </html>
