--- a/index.html
+++ b/index.html
@@ -210,7 +210,81 @@
 
     <footer>
         <section class="container">
+
+            <div class="vivadecor">
+                <img src="./icones/logo.svg" alt="Imagem da logo da marca VivaDecor">
+
+                <p class="paragrafo texto-branco">VivaDecor: Seu destino princial para design de interiores Luxuosos e modernos</p>
+                <div class="redes-sociais">
+                    <span class="rede-social-icon">
+                        <img src="./icones/facebook.svg" alt="">
+                    </span>
+
+                    <span class="rede-social-icon">
+                        <img src="./icones/instagram.svg" alt="">
+                    </span>
+
+                    <span class="rede-social-icon">
+                        <img src="./icones/twitter.svg" alt="">
+                    </span>
+
+                    <span class="rede-social-icon">
+                        <img src="./icones/linkedin.svg" alt="">
+                    </span>
+                </div>
+            </div>
+
+            <div class="rodape-servicos rodape-coluna">
+                <p class="paragrafo texto-branco">Nossos Serviços</p>
+
+                <ul class="links-rodape">
+                    <li>
+                        <a class="texto-cinza" href="">Design de interiores</a>
+                    </li>
+                    <li>
+                        <a class="texto-cinza" href="">Design ao ar livre</a>
+                    </li>
+                    <li>
+                        <a class="texto-cinza" href="">Design de iluminação</a>
+                    </li>
+                    <li>
+                        <a class="texto-cinza" href="">Design de escritórios</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="rodape-servicos rodape-coluna">
+                <p class="paragrafo texto-branco">Nossos Serviços</p>
+
+                <ul class="links-rodape">
+                    <li>
+                        <a class="texto-cinza" href="">Avaliações</a>
+                    </li>
+                    <li>
+                        <a class="texto-cinza" href="">Carreiras</a>
+                    </li>
+                    <li>
+                        <a class="texto-cinza" href="">Preços</a>
+                    </li>
+                    <li>
+                        <a class="texto-cinza" href="">Consulta de Empresa</a>
+                    </li>
+                </ul>
+            </div>
             
+            <div class="rodape-servicos rodape-coluna">
+                <p class="paragrafo texto-branco">Nossos Contatos</p>
+
+                <ul class="links-rodape">
+                    <li class="texto-cinza">
+                        VivaDecor@faq.com.br
+                    </li>
+                    <li class="texto-cinza">
+                        Avenida Itaquera 256, Itaquera - São Paulo.
+                    </li>
+                </ul>
+            </div>
+
         </section>
     </footer>
 </body>
