--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- Criando o cabeçalho principal da pagina -->
      <header class="cabecalho container">
         <img src="./icones/logo.svg" alt="Logo da Marca VivaDecor">
+
         <!-- Links de navegação da página -->
          <nav>
             <ul class="links-navegacao">
@@ -21,6 +22,7 @@
         </nav>
         <button>Cadastre-se</button>
      </header>
+
      <!-- Corpo Principal do assunto do site -->
       <main class="container">
         <section class="apresentacao">
@@ -49,9 +51,19 @@
                         </p>
                     </div>
                 </div>
-                <img src="./imagens/ambientes/Image 2.png" alt="Sala de estar com sofá e um vazo com planta">
+
+                <div class="position-elementos">
+                    <img src="./imagens/ambientes/Image 2.png" alt="Sala de estar com sofá e um vazo com planta">
+
+                    <button class="button-pricipal">
+                        <img src="./icones/seta-longa.svg" alt="">
+                    </button>
+
+                    <div class="contorno-quadrado"></div>
+                </div>
             </div>
         </section>
+
         <!-- Seção destinada aos serviços -->
         <section class="servicos-principais">
             <div class="titulo-tracejado">
@@ -68,6 +80,7 @@
                 </div>
                 <div class="servico">
                     <img src="./icones/interior-design.svg" alt="">
+
                     <div class="servico-texto">
                         <h3 class="titulo-servico">Design de interior</h3>
                         <p>Do conceito à conclusão, supervisionamos cada detalhe para trazer sua visão à vida de forma eficiente.</p>
@@ -78,10 +91,12 @@
                     <div class="servico-texto">
                         <h3 class="titulo-servico">Design ao ar livre</h3>
                         <p>Celebre as estações do ano com nossos serviços de decoração sazonal para áreas externas.</p>
-                    </div> 
+                    </div>
+                    
                 </div>
             </div>
         </section>
+
         <!-- Criando a seção projetando um serviço -->
          <section class="projecao">
             <img src="./imagens/ambientes/Image 3.png" alt="Decorações interiores da sala de estar">
@@ -101,10 +116,12 @@
                 <button>Ver mais +</button>
             </div>
          </section>
+
          <!-- Seção de passos de planejamento -->
           <section class="projecao-em-etapas projecao">
             <div class="projecao-textos projecao-passos">
                 <h2 class="titulo-secundario">Projetando seu sonho em três passos simples</h2>
+
                 <div class="passo-simples">
                     <div class="passo-icone">
                         <span class="balao">
@@ -114,6 +131,7 @@
                     </div>
                     <div class="passo-texto">
                         <h3 class="titulo-servico">Iniciando o Projeto</h3>
+
                         <p class="paragrafo">Embarque em sua aventura de design iniciando seu projeto. Compartilhe sua visão e prepare o terreno para uma experiência de design personalizada</p>
                     </div>
                 </div>
@@ -145,7 +163,9 @@
             <img src="./imagens/ambientes/Image 4.png" alt="">
         </section>
         <section class="nossos-clientes">
+            <img src="./imagens/ambientes/Image 5.png" alt="">
             <h2 class="titulo-secundario">O que Nossos Clientes Dizem Sobre Nós</h2>
+
             <div class="conteudo-secao-clientes">
                 <div class="depoimentos-clientes">
                     <article class="card">
@@ -181,40 +201,52 @@
                 </div>
             </div>
         </section>
+
         <!-- Seção de contato da empresa -->
          <section class="contato">
             <h2 class="titulo-secundario">
                 Assine nossa NewsLetter para receber Insights em Design
             </h2>
-            <p class="paragrafo">Seja o primeiro a conhecer as últimas tendências, inspirações e ofertas especias. Assine nossa newsletter e receba o mundo do design diretamente em seu e-mail.</p>
+
+            <p class="paragrafo" margin-bottom="200px">Seja o primeiro a conhecer as últimas tendências, inspirações e ofertas especias. Assine nossa newsletter e receba o mundo do design diretamente em seu e-mail.</p>
+
             <form action="">
                 <input type="email" placeholder="✉️ Insira seu endereço de e-mail">
-                <button class="">Inscrever-se</button>
+
+                <button class="button-pricipal">Inscrever-se</button>
             </form>
          </section>
     </main>
+
     <footer>
         <section class="container">
+
             <div class="vivadecor">
                 <img src="./icones/logo.svg" alt="Imagem da logo da marca VivaDecor">
+
                 <p class="paragrafo texto-branco">VivaDecor: Seu destino princial para design de interiores Luxuosos e modernos</p>
                 <div class="redes-sociais">
                     <span class="rede-social-icon">
                         <img src="./icones/facebook.svg" alt="">
                     </span>
+
                     <span class="rede-social-icon">
                         <img src="./icones/instagram.svg" alt="">
                     </span>
+
                     <span class="rede-social-icon">
                         <img src="./icones/twitter.svg" alt="">
                     </span>
+
                     <span class="rede-social-icon">
                         <img src="./icones/linkedin.svg" alt="">
                     </span>
                 </div>
             </div>
+
             <div class="rodape-servicos rodape-coluna">
                 <p class="paragrafo texto-branco">Nossos Serviços</p>
+
                 <ul class="links-rodape">
                     <li>
                         <a class="texto-cinza" href="">Design de interiores</a>
@@ -230,8 +262,10 @@
                     </li>
                 </ul>
             </div>
+
             <div class="rodape-servicos rodape-coluna">
                 <p class="paragrafo texto-branco">Nossos Serviços</p>
+
                 <ul class="links-rodape">
                     <li>
                         <a class="texto-cinza" href="">Avaliações</a>
@@ -247,8 +281,10 @@
                     </li>
                 </ul>
             </div>
+            
             <div class="rodape-servicos rodape-coluna">
                 <p class="paragrafo texto-branco">Nossos Contatos</p>
+
                 <ul class="links-rodape">
                     <li class="texto-cinza">
                         VivaDecor@faq.com.br
@@ -258,6 +294,7 @@
                     </li>
                 </ul>
             </div>
+
         </section>
     </footer>
 </body>
